--- a/src/packs/pouvoirs-potentiels-du-kit/folders_Pouvoirs_d_Esmeralda_WiYkAwp3Zlbrgg5T.yml
+++ b/src/packs/pouvoirs-potentiels-du-kit/folders_Pouvoirs_d_Esmeralda_WiYkAwp3Zlbrgg5T.yml
@@ -1,11 +1,11 @@
-type: Actor
+type: Item
 folder: null
-name: Éminences grises
+name: Pouvoirs d'Esmeralda
 color: '#a4653d'
 sorting: a
-_id: XPIQcOgA5DQHk5b4
+_id: WiYkAwp3Zlbrgg5T
 description: ''
-sort: 100000
+sort: 0
 flags: {}
 _stats:
   compendiumSource: null
@@ -14,7 +14,7 @@ _stats:
   coreVersion: '13.347'
   systemId: penombre
   systemVersion: '0'
-  createdTime: 1756932141518
-  modifiedTime: 1756932142579
+  createdTime: 1756930676479
+  modifiedTime: 1756930676479
   lastModifiedBy: 6qbNUhuoJ67e6dmf
-_key: '!folders!XPIQcOgA5DQHk5b4'
+_key: '!folders!WiYkAwp3Zlbrgg5T'
