--- a/src/packs/pretires-du-kit-1/eminence_C_liana_fSG1DvfPoQUix9mA.yml
+++ b/src/packs/pretires-du-kit-1/eminence_C_liana_fSG1DvfPoQUix9mA.yml
@@ -178,6 +178,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -187,9 +190,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.m7oh2WXepebJSUjC'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.m7oh2WXepebJSUjC'
   - name: Nous allons trouver mon compromis
     type: atout
     _id: WR4V1qycaSsnVY3g
@@ -200,6 +201,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -209,9 +213,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.WR4V1qycaSsnVY3g'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.WR4V1qycaSsnVY3g'
   - name: Voix suave et chant mélodieux
     type: atout
     _id: 29h76jB2qBRbrJ2M
@@ -222,6 +224,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -231,9 +236,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.29h76jB2qBRbrJ2M'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.29h76jB2qBRbrJ2M'
   - name: Femme de cour élevée dans la tradition
     type: atout
     _id: 8xtKAsLFa1UHeSq1
@@ -244,6 +247,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -253,9 +259,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.8xtKAsLFa1UHeSq1'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.8xtKAsLFa1UHeSq1'
   - name: Beauté à faire ramper un baron
     type: atout
     _id: eqO6yIe5XgAE5t61
@@ -266,6 +270,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -275,9 +282,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.eqO6yIe5XgAE5t61'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.eqO6yIe5XgAE5t61'
   - name: Pas feutrés
     type: atout
     _id: ajD1AqnvHr9AYhtZ
@@ -288,6 +293,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -297,9 +305,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.ajD1AqnvHr9AYhtZ'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.ajD1AqnvHr9AYhtZ'
   - type: maitrise
     name: Accord
     _id: UAzZtsJJDxcMBWzt
@@ -307,50 +313,54 @@ items:
     system:
       description: >-
         <h1>Céliana l'accordée</h1><p><strong>Pour préparer son effet magique,
-        Céliana doit…</strong></p><h6>Prérequis</h6><ul><li><p>interpréter un
-        morceau de musique en le chantant, les serpents agissant comme un chœur
-        sifflant.</p></li></ul><p><strong>Ce faisant,
-        elle…</strong></p><h6>Action magique</h6><ul><li><p>entre en résonance
-        avec l’esprit de sa cible et pénètre cet espace mental tant que dure
-        cette cantate. Chaque esprit ressemble à une contrée nouvelle et
-        fantasmagorique.</p></li></ul><p><strong>Avec un effet magique de niveau
-        ? …</strong></p><p><strong>elle parvient par exemple
-        à…</strong></p><ol><li><p><strong>identifier</strong> un effet magique
-        d’art ancien (accord, décorum, geste) ; lire les pensées superficielles
-        et les émotions ; etc.</p></li><li><p><strong>modifier</strong> les
-        pensées superficielles et les émotions ; apaiser, mettre en confiance,
-        exalter, encourager, soutenir ; provoquer culpabilité, découragement,
-        déconcentration et désorientation ; faire bégayer ; mettre en colère,
-        enrager ; glisser un message mental ;
-        etc.</p></li><li><p><strong>lire</strong> des souvenirs précis dans la
-        mémoire ; perturber un sens (vue, ouïe, odorat…) ; provoquer un
-        mouvement involontaire, ou réflexe ; faire ressentir une douleur fantôme
-        ; diriger l’attention ; faire accepter un mensonge ; libérer d’une
-        emprise mentale ; créer une barrière mentale ; attaquer l’esprit ;
-        etc.</p></li><li><p><strong>effacer</strong>, modifier ou créer un
-        souvenir précis, ou un lien familial ou affectif ; créer une phobie ;
-        ouvrir un canal télépathique ; rendre invalide pour une scène (endormir,
-        hypnotiser, rendre sourd, aveugle, muet…) ; suggérer une mission ou une
-        action complexe à un personnage ; apporter l’oubli ou l’acceptation d’un
-        traumatisme psychologique ; provoquer une crise de folie ;
-        etc.</p></li><li><p><strong>inspirer</strong> une confiance ou une
-        terreur absolue ; revivre un souvenir comme s’il était de nouveau réel ;
-        rendre amnésique ; prendre le contrôle mental d’un personnage, l’obliger
-        à une action complexe, lui imposer une mission ; tuer ;
+        Céliana
+        doit…</strong></p><h6>Prérequis</h6><ul><li><p><strong>interpréter un
+        morceau de musique</strong> en le chantant, les serpents agissant comme
+        un chœur sifflant.</p></li></ul><p><strong>Ce faisant,
+        elle…</strong></p><h6>Action magique</h6><ul><li><p><strong>entre en
+        résonance avec l’esprit de sa cible</strong> et pénètre cet espace
+        mental tant que dure cette cantate. Chaque esprit ressemble à une
+        contrée nouvelle et fantasmagorique.</p></li></ul><p><strong>Avec un
+        effet magique de niveau ? …</strong></p><p><strong>elle parvient par
+        exemple à…</strong></p><ol><li><p><strong>identifier</strong> un effet
+        magique d’art ancien (accord, décorum, geste) ; lire les pensées
+        superficielles et les émotions ;
+        etc.</p></li><li><p><strong>modifier</strong> les pensées superficielles
+        et les émotions ; apaiser, mettre en confiance, exalter, encourager,
+        soutenir ; provoquer culpabilité, découragement, déconcentration et
+        désorientation ; faire bégayer ; mettre en colère, enrager ; glisser un
+        message mental ; etc.</p></li><li><p><strong>lire</strong> des souvenirs
+        précis dans la mémoire ; perturber un sens (vue, ouïe, odorat…) ;
+        provoquer un mouvement involontaire, ou réflexe ; faire ressentir une
+        douleur fantôme ; diriger l’attention ; faire accepter un mensonge ;
+        libérer d’une emprise mentale ; créer une barrière mentale ; attaquer
+        l’esprit ; etc.</p></li><li><p><strong>effacer</strong>, modifier ou
+        créer un souvenir précis, ou un lien familial ou affectif ; créer une
+        phobie ; ouvrir un canal télépathique ; rendre invalide pour une scène
+        (endormir, hypnotiser, rendre sourd, aveugle, muet…) ; suggérer une
+        mission ou une action complexe à un personnage ; apporter l’oubli ou
+        l’acceptation d’un traumatisme psychologique ; provoquer une crise de
+        folie ; etc.</p></li><li><p><strong>inspirer</strong> une confiance ou
+        une terreur absolue ; revivre un souvenir comme s’il était de nouveau
+        réel ; rendre amnésique ; prendre le contrôle mental d’un personnage,
+        l’obliger à une action complexe, lui imposer une mission ; tuer ;
         etc.</p></li></ol><p>Mais attention, elle risque également
-        de…</p><h6>Incident magique</h6><ul><li><p>attirer les faux-accords, des
-        pratiquants de l’accord bannis par leurs semblables. Ils guettent, assis
-        dans le public ou désincarnés dans l’esprit de leurs victimes, prêts à
-        prendre leur revanche sur les autres accordés.</p></li><li><p>Céliana
-        subit un effet d’accord en retour ; elle est provoquée en duel musical ;
-        elle accède à un souvenir qu’elle aurait préféré éviter ;
-        etc.</p></li></ul>
+        de…</p><h6>Incident magique</h6><ul><li><p><strong>attirer les
+        faux-accords</strong>, des pratiquants de l’accord bannis par leurs
+        semblables. Ils guettent, assis dans le public ou désincarnés dans
+        l’esprit de leurs victimes, prêts à prendre leur revanche sur les autres
+        accordés.</p></li><li><p>Céliana subit un effet d’accord en retour ;
+        elle est provoquée en duel musical ; elle accède à un souvenir qu’elle
+        aurait préféré éviter ; etc.</p></li></ul>
       harmonique: ame
       niveau: 3
       prerequis: Chanter
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -360,9 +370,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.UAzZtsJJDxcMBWzt'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.UAzZtsJJDxcMBWzt'
   - type: pouvoir
     name: Regard médusant
     _id: qGfnqopDq8PRX7uq
@@ -379,6 +387,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -388,9 +399,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.qGfnqopDq8PRX7uq'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.qGfnqopDq8PRX7uq'
   - type: pouvoir
     name: Venin alchimique
     _id: HIMHYEZgtkO2bez6
@@ -412,6 +421,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -421,10 +433,11 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!XY5I6fZpqIoChtsQ.HIMHYEZgtkO2bez6'
+    _key: '!actors.items!fSG1DvfPoQUix9mA.HIMHYEZgtkO2bez6'
 effects: []
+ownership:
+  default: 0
+  6qbNUhuoJ67e6dmf: 3
 flags: {}
 _stats:
   compendiumSource: null
@@ -433,12 +446,9 @@ _stats:
   coreVersion: '13.347'
   systemId: penombre
   systemVersion: '0'
-  createdTime: 1756932141956
-  modifiedTime: 1756932141956
+  createdTime: 1756985461950
+  modifiedTime: 1756985466608
   lastModifiedBy: 6qbNUhuoJ67e6dmf
-_id: XY5I6fZpqIoChtsQ
+_id: fSG1DvfPoQUix9mA
 sort: 200000
-ownership:
-  default: 0
-  6qbNUhuoJ67e6dmf: 3
-_key: '!actors!XY5I6fZpqIoChtsQ'
+_key: '!actors!fSG1DvfPoQUix9mA'
