--- a/src/packs/pretires-du-kit-1/eminence_Esmeralda_hTmX5qfFSuBMEd6t.yml
+++ b/src/packs/pretires-du-kit-1/eminence_Esmeralda_hTmX5qfFSuBMEd6t.yml
@@ -175,6 +175,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -184,9 +187,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.Qujs4YryzHMhoSSu'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.Qujs4YryzHMhoSSu'
   - type: pouvoir
     name: Évanescence
     _id: Ba2L0gHMxiMmopFl
@@ -201,6 +202,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -210,9 +214,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.Ba2L0gHMxiMmopFl'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.Ba2L0gHMxiMmopFl'
   - type: pouvoir
     name: Ombre jumelle
     _id: 4WJ2j4OvYXDNywWI
@@ -228,6 +230,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -237,9 +242,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.4WJ2j4OvYXDNywWI'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.4WJ2j4OvYXDNywWI'
   - type: atout
     name: Personne ne fait jamais attention à moi
     _id: VL34UmJiv3Y6LAoi
@@ -250,6 +253,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -259,9 +265,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.VL34UmJiv3Y6LAoi'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.VL34UmJiv3Y6LAoi'
   - type: atout
     name: Vitricle prismatique, modèle unique
     _id: OrT2Z6COFq33pzEQ
@@ -272,6 +276,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -281,9 +288,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.OrT2Z6COFq33pzEQ'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.OrT2Z6COFq33pzEQ'
   - type: atout
     name: Je hais les couleurs criardes, je veux tout repeindre en noir
     _id: I5LcKpjwBLrpfRHa
@@ -294,6 +299,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -303,9 +311,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.I5LcKpjwBLrpfRHa'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.I5LcKpjwBLrpfRHa'
   - type: atout
     name: Vous ne comprenez vraiment rien !
     _id: AHLFwKGCQSUlhSz1
@@ -316,6 +322,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -325,9 +334,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.AHLFwKGCQSUlhSz1'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.AHLFwKGCQSUlhSz1'
   - type: atout
     name: Je possède un cheveu d'Agone. Oui, cet Agone-là !
     _id: 38TeBY1FBsvvh2l1
@@ -338,6 +345,9 @@ items:
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -347,9 +357,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.38TeBY1FBsvvh2l1'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.38TeBY1FBsvvh2l1'
   - type: maitrise
     name: Décorum
     _id: h8hFhHnLAAMMkC3Q
@@ -358,12 +366,13 @@ items:
       description: >-
         <h1>Esmeralda l’artiste du décorum</h1><p><strong>Pour préparer son
         effet magique, Esmeralda
-        doit…</strong></p><h6>Prérequis</h6><ul><li><p>réaliser une esquisse, un
-        croquis, un tableau, voire une fresque picturale dans laquelle,
-        toujours, on retrouve la présence d’Agone.</p></li></ul><p><strong>Ce
-        faisant, elle…</strong></p><h6>Action magique</h6><ul><li><p>redessine
-        la réalité comme si elle corrigeait l’œuvre maladroite d’un artiste
-        débutant. L’Harmonde inanimé se recompose sous son
+        doit…</strong></p><h6>Prérequis</h6><ul><li><p><strong>réaliser une
+        esquisse</strong>, un croquis, un tableau, voire une fresque picturale
+        dans laquelle, toujours, on retrouve la présence
+        d’Agone.</p></li></ul><p><strong>Ce faisant,
+        elle…</strong></p><h6>Action magique</h6><ul><li><p><strong>redessine la
+        réalité</strong> comme si elle corrigeait l’œuvre maladroite d’un
+        artiste débutant. L’Harmonde inanimé se recompose sous son
         trait.</p></li></ul><p><strong>Avec un effet magique de niveau ?
         …</strong></p><p><strong>elle parvient par exemple
         à…</strong></p><ol><li><p><strong>identifier</strong> un effet magique
@@ -381,19 +390,22 @@ items:
         etc.</p></li><li><p><strong>créer</strong> un tableau-monde connecté à
         l’Harmonde ; ouvrir un portail entre deux lieux distants ;
         etc.</p></li></ol><p><strong>Mais attention, elle risque également
-        de…</strong></p><h6>Incident magique</h6><ul><li><p>faire de sa vie une
-        œuvre. En prenant l’Harmonde pour toile, Esmeralda doit s’attendre à une
-        réaction de sa part ! Esmeralda se retrouve prisonnière d’un méandre ;
-        plusieurs réalités se superposent autour d’elle, ou pire, en elle ; son
-        environnement se transforme d’une manière imprévisible ; sa maladresse
-        suscite la colère des témoins alentour, ou de l’Harmonde lui-même qui
-        déchaîne les éléments contre elle ; etc.</p></li></ul>
+        de…</strong></p><h6>Incident magique</h6><ul><li><p><strong>faire de sa
+        vie une œuvre.</strong> En prenant l’Harmonde pour toile, Esmeralda doit
+        s’attendre à une réaction de sa part ! Esmeralda se retrouve prisonnière
+        d’un méandre ; plusieurs réalités se superposent autour d’elle, ou pire,
+        en elle ; son environnement se transforme d’une manière imprévisible ;
+        sa maladresse suscite la colère des témoins alentour, ou de l’Harmonde
+        lui-même qui déchaîne les éléments contre elle ; etc.</p></li></ul>
       harmonique: ame
       niveau: 1
       prerequis: dessiner avec ses fusains, ou du charbon
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -403,9 +415,7 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.h8hFhHnLAAMMkC3Q'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.h8hFhHnLAAMMkC3Q'
   - type: maitrise
     name: Prisme
     _id: DQY7PMB9y4tYDytr
@@ -414,22 +424,22 @@ items:
       description: >-
         <h1>Esmeralda l’artiste du prisme</h1><p><strong>Pour préparer son effet
         magique, Esmeralda
-        doit…</strong></p><h6>Prérequis</h6><ul><li><p>utiliser son vitricle.
-        Cet ingénieux ustensile appelle une loupe dont les verres pourraient
-        être interchangés par le truchement d’un petit levier, sauf que ces
-        verres sont des fragments de vitraux qui déforment la lumière d’une
-        façon incompréhensible pour la plupart des
+        doit…</strong></p><h6>Prérequis</h6><ul><li><p><strong>utiliser son
+        vitricle.</strong> Cet ingénieux ustensile appelle une loupe dont les
+        verres pourraient être interchangés par le truchement d’un petit levier,
+        sauf que ces verres sont des fragments de vitraux qui déforment la
+        lumière d’une façon incompréhensible pour la plupart des
         mortels.</p></li></ul><p><strong>Ce faisant,
-        elle…</strong></p><h6>Action magique</h6><ul><li><p>voit apparaître sous
-        ses yeux es indices et des détails, des odeurs colorées, des sons
-        parfumés, des goûts bruyants, des espaces insoupçonnés et des traverses
-        intimes.</p></li></ul><p><strong>Avec un effet magique de niveau ?
-        …</strong></p><p><strong>elle parvient par exemple
-        à…</strong></p><ol><li><p><strong>identifier</strong> un effet magique
-        d’art noir (conjuration, onyxium, prisme) ; éblouir ou aveugler un
-        personnage ; suivre la trace d’une personne dont elle connaît la couleur
-        prismatique ; savoir l ’allégeance d’un démon ; faire apparaître un
-        indice aux yeux de tous ; récolter une couleur unique ;
+        elle…</strong></p><h6>Action magique</h6><ul><li><p><strong>voit
+        apparaître sous ses yeux des indices</strong> et des détails, des odeurs
+        colorées, des sons parfumés, des goûts bruyants, des espaces
+        insoupçonnés et des traverses intimes.</p></li></ul><p><strong>Avec un
+        effet magique de niveau ? …</strong></p><p><strong>elle parvient par
+        exemple à…</strong></p><ol><li><p><strong>identifier</strong> un effet
+        magique d’art noir (conjuration, onyxium, prisme) ; éblouir ou aveugler
+        un personnage ; suivre la trace d’une personne dont elle connaît la
+        couleur prismatique ; savoir l ’allégeance d’un démon ; faire apparaître
+        un indice aux yeux de tous ; récolter une couleur unique ;
         etc.</p></li><li><p><strong>brouiller</strong> l’image d’une personne ou
         d’un objet ; comparer et différencier des couleurs très proches ;
         décomposer les ingrédients d’un son, ou d’un goût ; fabriquer des
@@ -455,18 +465,21 @@ items:
         entre démons et mortels) ; récolter l’âme d’une personne en même temps
         que sa couleur, et ainsi la tuer ; etc.</p></li></ol><p><strong>Mais
         attention, elle risque également de…</strong></p><h6>Incident
-        magique</h6><ul><li><p>trouver un diable dans les détails. Parfois, le
-        monde d’Esmeralda se distend autour d’elle, devient fractal et
-        impressionniste, ou s’étire en créatures obscènes. Un « gardien » sans
-        visage apparaît ; Esmeralda est aveuglée par la débauche de détails qui
-        l’entourent, ses sens saturés devenant ininterprétables ;
-        etc.</p></li></ul>
+        magique</h6><ul><li><p><strong>trouver un diable dans les
+        détails.</strong> Parfois, le monde d’Esmeralda se distend autour
+        d’elle, devient fractal et impressionniste, ou s’étire en créatures
+        obscènes. Un « gardien » sans visage apparaît ; Esmeralda est aveuglée
+        par la débauche de détails qui l’entourent, ses sens saturés devenant
+        ininterprétables ; etc.</p></li></ul>
       harmonique: nature
       niveau: 2
       prerequis: utiliser son vitricle
     effects: []
     folder: null
     sort: 0
+    ownership:
+      default: 0
+      6qbNUhuoJ67e6dmf: 3
     flags: {}
     _stats:
       compendiumSource: null
@@ -476,11 +489,12 @@ items:
       systemId: penombre
       systemVersion: '0'
       lastModifiedBy: null
-    ownership:
-      default: 0
-    _key: '!actors.items!1uEe5RDkPFdYiwlj.DQY7PMB9y4tYDytr'
+    _key: '!actors.items!hTmX5qfFSuBMEd6t.DQY7PMB9y4tYDytr'
 effects: []
 folder: XPIQcOgA5DQHk5b4
+ownership:
+  default: 0
+  6qbNUhuoJ67e6dmf: 3
 flags: {}
 _stats:
   compendiumSource: null
@@ -489,12 +503,9 @@ _stats:
   coreVersion: '13.347'
   systemId: penombre
   systemVersion: '0'
-  createdTime: 1756932141956
-  modifiedTime: 1756932141956
+  createdTime: 1756985464492
+  modifiedTime: 1756985466608
   lastModifiedBy: 6qbNUhuoJ67e6dmf
-_id: 1uEe5RDkPFdYiwlj
-sort: 150000
-ownership:
-  default: 0
-  6qbNUhuoJ67e6dmf: 3
-_key: '!actors!1uEe5RDkPFdYiwlj'
+_id: hTmX5qfFSuBMEd6t
+sort: 400000
+_key: '!actors!hTmX5qfFSuBMEd6t'
