Logo ombre portée dans Journal

--- a/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
+++ b/src/packs/journal/journal_Guide_d_utilisation_Foundry_VTT_FBtmpg0lA9Y8x4CJ.yml
@@ -132,7 +132,7 @@ pages:
         d’auteurs qui sont la propriété des éditions Æther Labs, avec l’aimable
         autorisation de Mnémos.</p><p style="text-align:center">Il est limité,
         pour l'instant, à la version kit de démo du jeu.</p><img
-        src="systems/penombre/assets/ui/logo_penombre_sur_fond_sombre.webp" style="background: rgba(11, 10, 19, 0.9);"/><p
+        src="systems/penombre/assets/ui/logo_penombre_sur_fond_sombre_ombre_portee.webp"/><p
         style="text-align:center">Le jeu de rôle dans les Royaumes
         crépusculaires</p><p style="text-align:center">d'après les romans de
         Mathieu Gaborit</p><blockquote><p>« On parle de vous. Vos futurs
