--- a/src/packs/pretires-du-kit-1/eminence_Ackbar_M6ted8636DNMiLp5.yml
+++ b/src/packs/pretires-du-kit-1/eminence_Ackbar_M6ted8636DNMiLp5.yml
@@ -1,4 +1,4 @@
-folder: XPIQcOgA5DQHk5b4
+folder: null
 name: Ackbar
 type: eminence
 img: systems/penombre/assets/portraits/ackbar.webp
@@ -486,12 +486,12 @@ _stats:
   compendiumSource: null
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.347'
+  coreVersion: '13.348'
   systemId: penombre
   systemVersion: '0'
   createdTime: 1757150754023
-  modifiedTime: 1757150754023
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  modifiedTime: 1759053018856
+  lastModifiedBy: ZPVZnAUjZn9mQP2q
 _id: M6ted8636DNMiLp5
 sort: 100000
 ownership:
