--- a/src/packs/pretires-du-kit-1/eminence_Ma_tre_Mangrove_oQfBudRYF5bAOKQP.yml
+++ b/src/packs/pretires-du-kit-1/eminence_Ma_tre_Mangrove_oQfBudRYF5bAOKQP.yml
@@ -415,20 +415,20 @@ items:
       default: 0
     _key: '!actors.items!oQfBudRYF5bAOKQP.z7xckgLN4L33u6XF'
 effects: []
-folder: XPIQcOgA5DQHk5b4
+folder: null
 flags: {}
 _stats:
   compendiumSource: null
   duplicateSource: null
   exportSource: null
-  coreVersion: '13.347'
+  coreVersion: '13.348'
   systemId: penombre
   systemVersion: '0'
   createdTime: 1757150754023
-  modifiedTime: 1757150754023
-  lastModifiedBy: 6qbNUhuoJ67e6dmf
+  modifiedTime: 1759053023183
+  lastModifiedBy: ZPVZnAUjZn9mQP2q
 _id: oQfBudRYF5bAOKQP
-sort: 0
+sort: 400000
 ownership:
   default: 0
   6qbNUhuoJ67e6dmf: 3
