--- a/src/packs/scenes/scenes_Image_1_tS3lTOQSktMht4Pz.yml
+++ b/src/packs/scenes/scenes_Image_1_tS3lTOQSktMht4Pz.yml
@@ -1,8 +1,8 @@
-name: Fond Pénombre
+name: Image 1
 navigation: false
-navName: ''
+navOrder: 0
 background:
-  src: systems/penombre/assets/background/splash_fond_penombre.avif
+  src: systems/penombre/assets/background/fond_1.webp
   anchorX: 0
   anchorY: 0
   offsetX: 0
@@ -14,25 +14,25 @@ background:
   tint: '#ffffff'
   alphaThreshold: 0
 foreground: null
-foregroundElevation: 20
-thumb: ''
-width: 1351
-height: 768
+foregroundElevation: null
+thumb: systems/penombre/assets/background/fond_1.webp
+width: 3408
+height: 2212
 padding: 0.25
 initial:
-  x: 1079
-  'y': 575
-  scale: 1.4626303599608632
+  x: null
+  'y': null
+  scale: null
 backgroundColor: '#999999'
 grid:
-  type: 0
+  type: 1
   size: 100
   style: solidLines
   thickness: 1
   color: '#000000'
   alpha: 0.2
-  distance: 5
-  units: m
+  distance: 1
+  units: ''
 tokenVision: true
 fog:
   exploration: true
@@ -92,14 +92,14 @@ _stats:
   coreVersion: '13.348'
   systemId: penombre
   systemVersion: '#{VERSION}#'
-  createdTime: 1759054254528
-  modifiedTime: 1759054254528
-  lastModifiedBy: ZPVZnAUjZn9mQP2q
+  createdTime: 1759061980304
+  modifiedTime: 1759062805835
+  lastModifiedBy: 8Q6LpKLlMUKLXZkK
+navName: ''
 ownership:
   default: 0
   ZPVZnAUjZn9mQP2q: 3
-navOrder: 0
-_id: NLruUo5sE6y10xv2
+_id: tS3lTOQSktMht4Pz
 active: false
-sort: 0
-_key: '!scenes!NLruUo5sE6y10xv2'
+sort: 75000
+_key: '!scenes!tS3lTOQSktMht4Pz'
